plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.7.8'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'org.sonarqube' version '3.5.0.2730'
}

group = 'com.itau.pix'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'




repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.jetbrains:annotations:23.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'org.projectlombok:lombok:1.18.22'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    runtimeOnly 'com.mysql:mysql-connector-j'

    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.3.1'
    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.8.2'

}

tasks.named('test') {
    useJUnitPlatform()
}

configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled false
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "greijal_pix"
        property "sonar.organization", "greijal"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}
check.dependsOn jacocoTestReport